frontend/test/bad/badtest3.cam

f : Int -> Int
f = \3 -> 5